--- a/misc/demo/index.html
+++ b/misc/demo/index.html
@@ -17,7 +17,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-sanitize.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-resource.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-cookies.js"></script>
-    <script src="ng-cier-lib.js"></script>
+    <script src="ng-cier-lib.min.js"></script>
     <script src="assets/app.js"></script>
 
     <link rel="author" href="https://github.com/angular-ui/bootstrap/graphs/contributors">
@@ -25,6 +25,6 @@
 <body class="ng-cloak" >
 
 	<csv-table src="assets/data/MOCK_DATA.csv"></csv-table>
-
+ 
 </body>
 </html>
