added bar graph base

--- a/misc/demo/index.html
+++ b/misc/demo/index.html
@@ -25,6 +25,7 @@
 <body class="ng-cloak" >
 
 	<csv-table src="assets/data/MOCK_DATA.csv"></csv-table>
+    <bar-graph></bar-graph>
  
 </body>
 </html>
