created bar directive

--- a/misc/demo/index.html
+++ b/misc/demo/index.html
@@ -17,6 +17,10 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-sanitize.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-resource.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-cookies.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.8.1/nv.d3.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-nvd3/1.0.5/angular-nvd3.min.js"></script>
+
     <script src="ng-cier-lib.min.js"></script>
     <script src="assets/app.js"></script>
 
@@ -25,7 +29,7 @@
 <body class="ng-cloak" >
 
 	<csv-table src="assets/data/MOCK_DATA.csv"></csv-table>
-    <bar-graph></bar-graph>
+    <bar-graph src="assets/data/bardata.json"></bar-graph>
  
 </body>
 </html>
