--- a/src/ng-cier-lib/directives/bar-graph/bar-graph.html
+++ b/src/ng-cier-lib/directives/bar-graph/bar-graph.html
@@ -1,4 +1,3 @@
 <div class="bar-graph">
-  <div>The value is {{getValue()}}</div>
-  <button ng-click="increment()">+</button>
+   <nvd3 options="options" data="data"></nvd3>
 </div>
